# logbook-be

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
docs/: api_contract.md  git_branch_slug_guide.md
docs/dto_drafts/: board-list-dto.json  post-detail-dto.json  profile-public-dto.json  profile-resume-dto.json
src/: main.py
src/api/routers/: profile.py
src/core/: config.py
src/schemas/: profile.py  resume.py
src/services/: mock_profile.py  mock_resume.py
