[project]
name = "logbook-be"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "annotated-doc (==0.0.4)",
    "annotated-types (==0.7.0)",
    "anyio (==4.12.1)",
    "click (==8.3.1)",
    "exceptiongroup (==1.3.1)",
    "fastapi (==0.135.1)",
    "h11 (==0.16.0)",
    "idna (==3.11)",
    "pydantic (==2.12.5)",
    "pydantic-core (==2.41.5)",
    "python-dotenv (==1.2.2)",
    "starlette (==0.52.1)",
    "typing-inspection (==0.4.2)",
    "typing-extensions (==4.15.0)",
    "uvicorn (==0.42.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
